<resources>
    <string name="app_name">STOCK PORTFOLIO</string>
    <string name="action_settings">SETTINGS</string>

    <string name="insert_stock_company_code">STOCK COMPANY CODE:</string>
    <string name="stock_quantity">STOCK QUANTITY:</string>
    <string name="hint_insert_quantity">INSERT QUANTITY</string>
    <string name="value">ENTER THE VALUE:</string>
    <string name="hint_value">00.00</string>
    <string name="purchase_date">PURCHASE DATE:</string>
    <string name="hint_insert_purchase_date"> YYYY/MM/DD</string>
    <string name="btn_save">SAVE</string>
    
    <string name="fields_validation">ALL FIELDS MUST BE FILLED IN!</string>
    <string name="attention">ATTENTION</string>
    <string name="cancel">CANCEL</string>
    <string name="yes">YES</string>
    <string name="exclusion_of_the_stock_company">CONFIRMS THE EXCLUSION OF THE STOCK COMPANY\u0020</string>
    <string name="question_mark">\u0020\u003F</string>
    <string name="select">SELECT</string>

    <string name="amount">AMOUNT:</string>
    <string name="qty">QTY:</string>
    <string name="coin">$:</string>
    <string name="date">DATE:</string>

</resources>